update favicon logo with firebase public link

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/img/favicon.ico" />
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/images-d10d2.appspot.com/o/basic-health-units%2Ffavicon.png?alt=media&token=d64b0bf4-f81a-4eed-95f1-d768503e28f8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Unidades Básicas de Saúde</title>
